@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.gbif.geocode</groupId>
     <artifactId>geocode-motherpom</artifactId>
-    <version>1.7-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>geocode-ws</artifactId>
@@ -124,7 +124,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>-Xmx16g</argLine>
+          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED -Xmx16g</argLine>
         </configuration>
       </plugin>
     </plugins>
